# Aster-Mail

./: .deploy_epoch  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  capacitor.config.ts  components.json  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.a11y.ts  playwright.config.diag.ts  playwright.config.export.ts  playwright.config.local.ts  playwright.config.reserve.ts  playwright.config.search.ts  playwright.config.setup.ts  playwright.config.ts  start.sh  start_mac.command  start_mac.sh  tailwind.config.js  test_security_key.mjs  tsconfig.node.tsbuildinfo  verify_import.mjs  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build_windows.yml  dependabot-auto-merge.yml  release.yml  sign_macos.yml  (+2 more)
android/: capacitor.settings.gradle
aster-crypto/: Cargo.toml  LICENSE  README.md
aster-crypto/src/: decrypt.rs  encrypt.rs  error.rs  keys.rs  lib.rs  password.rs  sign.rs
aster-crypto/tests/: readme_example.rs
e2e/: detox.config.js  jest.config.js  tsconfig.json
patches/: openpgp+6.3.0.patch
public/: _headers  font-loader.js  stripe-checkout-fonts.css  tauri-crypto-shim.js  theme-bootstrap.js
scripts/: codemod_legacy_kek.mjs  fix_import_insert.mjs  patch_auth_translations.py  patch_contacts_translations.py  test_legacy_kek_e2e.mjs  validate_translations.mjs
src/: App.tsx  main.tsx  mobile_app.tsx  provider.tsx  sw.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
stalwart/: docker-compose.yml
(+1177 files in other folders)
