[package]
name = "aster-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Aster Communications Inc."]
description = "OpenPGP-based end-to-end encryption for Aster Mail"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "getrandom/js", "console_error_panic_hook"]

[dependencies]
pgp = "0.14"
smallvec = "1.13"
rand = "0.8"

argon2 = "0.5"
sha2 = "0.10"

rand_core = "0.6"
getrandom = "0.2"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
